--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,27 +1,29 @@
+html {
+  background-color: #000;
+  color: #fff;
+}
+
 body {
-  font: 13px Hack, monospace;
+  font-family: "MaisonNeue-Bold", Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  width: 90%;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
-a {
-  color: #000;
-  text-decoration: none;
-}
+/* Containers */
 
-a:hover {
-  text-decoration: underline;
-}
-
-h1 {
-  text-align: center;
-  padding-top: 500px;
+.logo_container {
+  position:fixed;
+  z-index: 2;
+  top: 60px;
 }
 
 .landing_container {
-  width: 100%;
   height:100vh;
   position: relative;
   z-index: 0;
-  background-color: #F00;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -33,10 +35,35 @@ h1 {
   width: 100%;
   height: 5000px;
   position:relative;
-  z-index: 10;
+  z-index: 1;
   background-color: #00F;
   background-repeat: no-repeat;
 }
+
+/* Headlines */
+
+h1 {
+  line-height: 26pt;
+  font-size: 22pt;
+}
+
+h2 {
+  text-align: center;
+  padding-top: 500px;
+}
+
+/* Links */
+
+a {
+  color: #000;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+/* Media Types */
 
 /* Landscape phones and down */
 @media (max-width: 480px) {
