--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,9 +7,6 @@ body {
   font-family: "MaisonNeue-Bold", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 700;
-  width: 90%;
-  max-width: 1024px;
-  margin: 0 auto;
 }
 
 /* Containers */
@@ -18,26 +15,40 @@ body {
   position:fixed;
   z-index: 2;
   top: 60px;
+  left: 5%;
 }
 
 .landing_container {
-  height:100vh;
   position: relative;
+  height: 100vh;
   z-index: 0;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-position: 50%;
+  background-image: url('../images/thomaspaulmann.jpg');
 }
 
 .content_container {
-  width: 100%;
-  height: 5000px;
-  position:relative;
+  position: relative;
   z-index: 1;
-  background-color: #00F;
-  background-repeat: no-repeat;
+  width: 90%;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+
+#fade_out {
+  position: relative;
+  height: 100px;
+  background: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0, 1));
+}
+
+#content {
+  position: relative;
+  background: #000;
+  padding-bottom: 60px;
 }
 
 /* Headlines */
@@ -45,6 +56,8 @@ body {
 h1 {
   line-height: 26pt;
   font-size: 22pt;
+  opacity: 0.95;
+
 }
 
 h2 {
@@ -61,6 +74,16 @@ a {
 
 a:hover {
   text-decoration: underline;
+}
+
+/* Paragraphs */
+/* Paragraphs */
+
+p {
+  padding-top: 20px;
+  line-height: 24pt;
+  font-size: 20pt;
+  opacity: 0.95;
 }
 
 /* Media Types */
