--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -86,11 +86,19 @@ h2 {
 a {
   color: #fff;
   text-decoration: none;
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
 }
 
 a:hover {
   opacity: 0.2;
   filter: alpha(opacity=20);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
 }
 
 .footer_container a {
@@ -98,17 +106,49 @@ a:hover {
   opacity: 0.2;
   filter: alpha(opacity=20);
   text-decoration: none;
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
 }
 
 .footer_container a:hover {
   opacity: 0.5;
   filter: alpha(opacity=50);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
 }
 
 /* Paragraphs */
 
 p {
   padding-top: 20px;
+}
+
+/* SVGs */
+
+.arrow {
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  height: 30px;
+  width: 60px;
+  margin-left: -30px;
+  margin-top: -30px;
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
+}
+
+.arrow:hover {
+  transform: scale(1.2, 1.2);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
 }
 
 /* Media Types */
