--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -137,6 +137,8 @@ p {
   width: 60px;
   margin-left: -30px;
   margin-top: -30px;
+  cursor: pointer;
+  cursor: hand; 
   -webkit-transition: all 300ms;
      -moz-transition: all 300ms;
        -o-transition: all 300ms;
