--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,12 +3,14 @@ html {
   color: #fff;
   line-height: 24pt;
   font-size: 20pt;
+  height: 100%;
 }
 
 body {
   font-family: "MaisonNeue-Bold", Helvetica, Arial, sans-serif;
   font-style: normal;
   font-weight: 700;
+  height: 100%;
 }
 
 /* Containers */
@@ -29,7 +31,7 @@ body {
 
 .landing_container {
   position: relative;
-  height: 100vh;
+  height: 100%;
   z-index: 0;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
@@ -138,7 +140,7 @@ p {
   margin-left: -30px;
   margin-top: -30px;
   cursor: pointer;
-  cursor: hand; 
+  cursor: hand;
   -webkit-transition: all 300ms;
      -moz-transition: all 300ms;
        -o-transition: all 300ms;
