--- a/stylesheets/imprint-styles.css
+++ b/stylesheets/imprint-styles.css
@@ -3,8 +3,10 @@ html {
   color: #000;
 }
 
-body {
-  margin-top: 40px;
+/* Containers */
+
+.content_container {
+  padding-top: 40px;
 }
 
 /* Links */
