--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -55,8 +55,8 @@ body {
   width: 90%;
   left: 5%;
   background: #000;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   text-align: right;
 }
 
@@ -154,8 +154,8 @@ p {
   }
 
   .footer_container {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   #fade_out {
