--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,7 +1,7 @@
 html {
   background-color: #000;
   color: #fff;
-  line-height: 24pt;
+  line-height: 1;
   font-size: 20pt;
   height: 100%;
 }
@@ -47,6 +47,7 @@ body {
   z-index: 1;
   width: 85%;
   left: 5%;
+  text-align: center;
 }
 
 .footer_container {
@@ -75,6 +76,8 @@ body {
 
 a {
   color: #fff;
+  opacity: 1.0;
+  filter: alpha(opacity=100);
   text-decoration: none;
   -webkit-transition: all 300ms;
      -moz-transition: all 300ms;
@@ -83,8 +86,8 @@ a {
 }
 
 a:hover {
-  opacity: 0.2;
-  filter: alpha(opacity=20);
+  opacity: 0.5;
+  filter: alpha(opacity=50);
   -webkit-transition: all 300ms;
      -moz-transition: all 300ms;
        -o-transition: all 300ms;
@@ -113,11 +116,9 @@ a:hover {
 
 /* Paragraphs */
 
-/*
 p {
   padding-top: 20px;
 }
-*/
 
 /* SVGs */
 
