--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -54,8 +54,10 @@ body {
 }
 
 #fade_out {
-  position: relative;
+  position: absolute;
+  bottom: 0px;
   height: 60px;
+  width: 100%;
   background: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0, 1));
 }
 
@@ -116,7 +118,7 @@ p {
 
 .arrow {
   position: absolute;
-  bottom: 30px;
+  bottom: 50px;
   left: 50%;
   height: 30px;
   width: 60px;
