Adjust headers in mobile context

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -155,6 +155,10 @@ p {
     top: 30px;
   }
 
+  .contact_container {
+    top: 30px;
+  }
+
   .footer_container {
     padding-top: 30px;
     padding-bottom: 30px;
