--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -28,11 +28,64 @@ h2 {
   font-size: 30px;
 }
 
+h3 {
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+  margin-top: 30px;
+}
+
+h4 {
+  position: relative;
+  text-align: center;
+  font-size: 30px;
+  margin-top: 10px;
+}
+
 p {
   position: relative;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+a {
+  color: #000;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  text-decoration: none;
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
+}
+
+a:hover {
+  opacity: 0.3;
+  filter: alpha(opacity=30);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
+}
+
+.contact a {
+  color: #fff;
+  opacity: 1.0;
+  filter: alpha(opacity=100);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
+}
+
+.contact a:hover {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
+  -webkit-transition: all 300ms;
+     -moz-transition: all 300ms;
+       -o-transition: all 300ms;
+          transition: all 300ms;
 }
 
 .left {
