--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -69,7 +69,7 @@ a:hover {
           transition: all 300ms;
 }
 
-.contact a {
+.menu a {
   color: #fff;
   opacity: 1.0;
   filter: alpha(opacity=100);
@@ -79,7 +79,7 @@ a:hover {
           transition: all 300ms;
 }
 
-.contact a:hover {
+.menu a:hover {
   opacity: 0.5;
   filter: alpha(opacity=50);
   -webkit-transition: all 300ms;
@@ -122,7 +122,7 @@ a:hover {
   left: 60px;
 }
 
-.contact {
+.menu {
   position: absolute;
   z-index: 1;
   bottom: 60px;
@@ -172,7 +172,7 @@ a:hover {
     left: 30px;
   }
 
-  .contact {
+  .menu {
     bottom: 30px;
     left: 30px;
   }
