--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -91,7 +91,7 @@ a:hover {
 .left {
   position: fixed;
   float: left;
-  height: 100%;
+  height: 100vh;
   width: 50%;
   color: #fff;
   background-color: #000;
@@ -109,7 +109,7 @@ a:hover {
   z-index: 0;
   position: relative;
   float: right;
-  min-height: 100%;
+  min-height: 100vh;
   width: 50%;
   color: #000;
   background-color: #fff;
