--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -70,7 +70,7 @@ a:hover {
 }
 
 .menu a {
-  color: #fff;
+  color: #000;
   opacity: 1.0;
   filter: alpha(opacity=100);
   -webkit-transition: all 300ms;
@@ -93,11 +93,11 @@ a:hover {
   float: left;
   height: 100%;
   width: 50%;
-  color: #fff;
-  background-color: #000;
+  color: #000;
+  background-color: #fff;
   background-repeat: no-repeat;
-  background-position: 50%;
-  background-image: url('../images/thomaspaulmann@2x.jpg');
+  background-position: 50% 90%;
+  background-image: url('../images/me.png');
 
   -webkit-background-size: cover;
      -moz-background-size: cover;
