--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -97,7 +97,7 @@ a:hover {
   background-color: #fff;
   background-repeat: no-repeat;
   background-position: 50% 90%;
-  background-image: url('../images/me.png');
+  background-image: url('../images/me.jpg');
 
   -webkit-background-size: cover;
      -moz-background-size: cover;
